edited the services, added authentication, added logs and unit and integration testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Hibernate properties
 spring.jpa.hibernate.ddl-auto=create
 logging.file.name=myapp.log
+admin.api.key=MY_ADMIN
